<resources>
    <string name="app_name">Volunteer Lookout</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="zip_code">Zip Code</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create New Account</string>
    <string name="name">Name</string>
    <!-- <string name="name">Name</string> -->
    <string name="location">Location</string>
    <!-- <string name="location">Location</string> -->
    <string name="details">Details</string>
    <!-- <string name="details">Details</string> -->
    <!-- <string name="select">Select</string> -->
    <!--  <string name="select">Select</string> -->
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="first_name1">First Name:</string>
    <string name="retype_password1">Retype Password:</string>
    <string name="new_password1">New Password:</string>
    <string name="password1">Password:</string>
    <string name="last_name1">Last Name:</string>
    <string name="home1">Home</string>
    <string name="select">Select</string>
    <string name="volunteers_to_help_with_ink_on_small_electronics_recycle_drive_collecting_all_ink_cartriges_cell_phones_and_more">Volunteers to help with Ink on small Electronics Recycle Drive, collecting all ink cartriges, cell phones and more.</string>
    <string name="eleanor_e_murphy_library">Eleanor E Murphy Library</string>
    <string name="_7910_charlotte_dr_sw_huntsville_al_35802">7910 Charlotte Dr SW, Huntsville, AL 35802</string>
    <string name="_5487">5487</string>
    <string name="thank_you_for_your_submission_to_volunteer_look_out">Thank You For Your Submission To Volunteer Look Out!</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="locationd">Location:</string>
    <string name="reference">Reference#:</string>
    <string name="_4_30_20">4/30/20</string>
    <string name="_11_20">11:20</string>
    <string name="public_library_in_huntsville_alabama">Public library in Huntsville, Alabama</string>
    <string name="huntsville_alabama">Huntsville, Alabama</string>
    <string name="public_library">Public library</string>
    <string name="u_s_space_rocket_center"><![CDATA[U.S. Space & Rocket Center]]></string>
    <!-- <string name="huntsville_alabama">Huntsville, Alabama</string> -->
    <string name="museum">Museum</string>
    <string name="home">Home</string>
    <!-- <string name="u_s_space_rocket_center"><![CDATA[U.S. Space & Rocket Center]]></string> -->
    <string name="_1_tranquility_base_huntsville_al_35805">1 Tranquility Base, Huntsville, AL 35805</string>
    <string name="needs_student_volunteers_who_can_commit_65_hours">Needs Student Volunteers who can commit 65+ hours.</string>
   <!--  <string name="_4_30_20">4/30/20</string> -->
  <!--  <string name="time">Time:</string> -->
    <string name="_11_25">11:25</string>
    <string name="locationdd">Location:</string>
   <!-- <string name="u_s_space_rocket_center"><![CDATA[U.S. Space & Rocket Center]]></string> -->
    <!-- <string name="reference">Reference#:</string> -->
    <string name="_1738">1738</string>
    <string name="_5489">5489</string>
  <!--  <string name="_11_20">11:20</string>
    <string name="_4_30_20">4/30/20</string>
    <string name="reference">Reference#:</string> -->
    <string name="locationddd">Location:</string>
    <string name="u_s_space_rocket_center1"><![CDATA[U.S. Space & Rocket Center]]></string>
    <string name="_5482">5482</string>
    <string name="_11_24">11:24</string>
    <string name="_5520">5520</string>
    <string name="rayj">rayj</string>
    <string name="volunteeropp">volunteeropp</string>
    <!-- <string name="time">Time:</string> -->
</resources>
